--- a/composer.json
+++ b/composer.json
@@ -8,19 +8,19 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^7.1.3",
-        "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.6.*",
-        "laravel/tinker": "^1.0",
+        "php": ">=7.0.0",
+        "fideloper/proxy": "~4.0",
+        "laravel/framework": "5.5.*",
+        "laravel/tinker": "~1.0",
         "tcg/voyager": "^1.1",
         "voyager-bread-generator": "dev-master"
     },
     "require-dev": {
-        "filp/whoops": "^2.0",
-        "fzaninotto/faker": "^1.4",
-        "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.0"
+        "filp/whoops": "~2.0",
+        "fzaninotto/faker": "~1.4",
+        "mockery/mockery": "~1.0",
+        "phpunit/phpunit": "~6.0",
+        "symfony/thanks": "^1.0"
     },
     "autoload": {
         "classmap": [
