--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
         "fideloper/proxy": "~4.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "tcg/voyager": "^1.1",
-        "voyager-bread-generator": "dev-master"
+        "tcg/voyager": "^1.1"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
@@ -58,8 +57,6 @@
         "sort-packages": true,
         "optimize-autoloader": true
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "repositories": {
         "hooks": {
             "type": "composer",
